--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,21 +7,25 @@ spring:
   security:
     user:
       password: 1
+  datasource:
+    url: jdbc:h2:tcp://localhost/~/codidb
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
   h2:
     console:
       enabled: true
-  datasource:
-    url: jdbc:h2:tcp://localhost/~/codidb
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver  
   jpa:
     hibernate:
       ddl-auto: create
     properties:
       hibernate:
-        format_sql: true
-        #show_sql: true #System.out.print로 출력한다.        
+        format-sql: true
+        show-sql: true #System.out.print로 출력한다.
+    defer-datasource-initialization: true
+  sql:
+    init:
+      mode: always
 logging:
   level:
     org:
